# hasql-dynamic-statements

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  hasql-dynamic-statements.cabal
.github/workflows/: on-push-to-release.yaml
src/test/: SpecHook.hs
src/test/Regressions/: Issue2Spec.hs
src/test/Units/: SnippetSpec.hs
test/: Main.hs
