cabal-version: 3.0
name: hasql-dynamic-statements
version: 0.3.1.8
synopsis: Hasql extension for dynamic construction of statements
description:
  Library extending Hasql with an abstraction that simplifies construction of SQL statements, the structure of which depends on the parameters.

homepage: https://github.com/nikita-volkov/hasql-dynamic-statements
bug-reports:
  https://github.com/nikita-volkov/hasql-dynamic-statements/issues

author: Nikita Volkov <nikita.y.volkov@mail.ru>
maintainer: Nikita Volkov <nikita.y.volkov@mail.ru>
copyright: (c) 2019, Nikita Volkov
license: MIT
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/nikita-volkov/hasql-dynamic-statements

common base
  default-language: Haskell2010
  default-extensions:
    ApplicativeDo
    BangPatterns
    BlockArguments
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveTraversable
    DerivingVia
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoImplicitPrelude
    NoMonomorphismRestriction
    OverloadedStrings
    PatternGuards
    QuasiQuotes
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

common executable
  import: base
  ghc-options:
    -O2
    -threaded
    -with-rtsopts=-N
    -rtsopts
    -funbox-strict-fields

common test
  import: base
  ghc-options:
    -threaded
    -with-rtsopts=-N

library
  import: base
  hs-source-dirs: src/library
  exposed-modules:
    Hasql.DynamicStatements.Session
    Hasql.DynamicStatements.Snippet
    Hasql.DynamicStatements.Statement

  other-modules:
    Hasql.DynamicStatements.Prelude
    Hasql.DynamicStatements.Snippet.Defs

  build-depends:
    base >=4.14 && <5,
    bytestring >=0.10 && <0.13,
    containers >=0.6 && <0.8,
    hasql >=1.8 && <1.10,
    hasql-implicits >=0.2 && <0.3,
    ptr >=0.16.7.2 && <0.17,

test-suite test
  import: test
  type: exitcode-stdio-1.0
  hs-source-dirs: src/test
  main-is: Main.hs
  build-depends:
    hasql,
    hasql-dynamic-statements,
    rerebase <2,
    tasty >=0.12 && <2,
    tasty-hunit >=0.9 && <0.11,
